Configure Maven to use 1,8 GB and 712M PermSize to perform tests. Otherwise the jvm crashes while generating reports.